:sparkles: Estilizacao inicial

--- a/frontend/MonitorProcessos/src/app/app.component.html
+++ b/frontend/MonitorProcessos/src/app/app.component.html
@@ -1,4 +1,6 @@
-<router-outlet />
-
-<!-- <p>dsadsads</p>
-<app-card></app-card> -->
+<div>
+  <app-sidebar></app-sidebar>
+  <div class="dashboard">
+    <router-outlet />
+  </div>
+</div>
