--- a/frontend/MonitorProcessos/src/styles.css
+++ b/frontend/MonitorProcessos/src/styles.css
@@ -1,1 +1,47 @@
-/* You can add global styles to this file, and also import other style files */
+.container {
+  width: 100%;
+  max-width: 1440px;
+  padding: 20px;
+}
+
+.flex {
+  display: flex;
+}
+
+.grid {
+  display: grid;
+}
+
+:root {
+  --clr-dark: #140431;
+  --clr-medium: #720cdb;
+  --clr-light: #f4e9f6;
+  --txt-dark: black;
+  --bg-light: white;
+}
+
+
+::-webkit-scrollbar {
+  width: 15px;
+}
+
+
+::-webkit-scrollbar-thumb {
+  background-color: var(--clr-dark);
+  border-radius: 15px;
+}
+
+
+::-webkit-scrollbar-track {
+  background-color: var(--clr-light);
+}
+
+::-moz-scrollbar {
+  width: 15px;
+}
+
+
+::-moz-scrollbar-thumb {
+  background-color: #888;
+}
+
