:iphone: Adiciona responsividade do header

--- a/frontend/MonitorProcessos/src/app/app.component.html
+++ b/frontend/MonitorProcessos/src/app/app.component.html
@@ -1,6 +1,2 @@
-<div>
-  <app-sidebar></app-sidebar>
-  <div class="dashboard">
-    <router-outlet />
-  </div>
-</div>
+<app-header></app-header>
+<router-outlet />
