--- a/frontend/MonitorProcessos/src/styles.css
+++ b/frontend/MonitorProcessos/src/styles.css
@@ -1,3 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Jersey+20&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Protest+Strike&family=Space+Grotesk:wght@300..700&display=swap');
+
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+
 .container {
   width: 100%;
   max-width: 1440px;
@@ -27,11 +35,16 @@ h1 {
   margin-bottom: 15px !important;
 }
 
+h1, h2, h3 {
+  font-family: "Jersey 20", sans-serif;
+}
+
 .card {
   border-radius: 15px;
   padding: 20px;
   border: none;
   box-shadow: 1px 1px 8px rgba(67, 67, 67, 0.166);
+  min-width: 550px;
 }
 
 .charts{
@@ -75,3 +88,29 @@ h1 {
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+button {
+  max-width: 150px;
+  border-radius: 15px;
+  padding: 10px;
+  border: none;
+  background: var(--clr-light);
+  margin-bottom: 20px;
+  box-shadow: 3px 3px 8px rgba(0, 0, 0, 0.216);
+  font-weight: 500;
+}
+
+button:hover {
+  background: rgb(188, 139, 220);
+  color: white;
+
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+a:hover {
+  color: #e3d0f5;
+}
