:iphone: Adiciona responsividade nos cards e graficos

--- a/frontend/MonitorProcessos/src/app/components/dashboard/dashboard.component.css
+++ b/frontend/MonitorProcessos/src/app/components/dashboard/dashboard.component.css
@@ -1,5 +1,5 @@
 .grid {
-  grid-template-columns: minmax(650px, 1fr) 1fr;
+  grid-template-columns: 1fr 1fr;
   grid-template-areas:
   'card-1 card-2'
   'card-3 card-3'
@@ -22,4 +22,17 @@
 
 .card.flex {
   flex-direction: row;
+  justify-content: space-between;
+}
+
+@media (max-width: 915px) {
+  .grid {
+    grid-template-columns: 1fr;
+    grid-template-areas:
+    'card-1'
+    'card-2'
+    'card-3'
+    'card-4';
+    gap: 20px;
+  }
 }
