--- a/frontend/MonitorProcessos/src/app/components/process-list/process-list.component.html
+++ b/frontend/MonitorProcessos/src/app/components/process-list/process-list.component.html
@@ -1,7 +1,7 @@
 <h1>Processos</h1>
 <div class="table-responsive">
   <table class="table table-striped" matSort (matSortChange)="sortData($event.active)">
-    <thead>
+    <thead class="table-light">
       <tr>
         <th mat-sort-header="nome" (click)="sortData('nome')">Nome</th>
         <th mat-sort-header="id" (click)="sortData('id')">ID</th>
