--- a/frontend/MonitorProcessos/src/app/components/cpu-card/cpu-card.component.html
+++ b/frontend/MonitorProcessos/src/app/components/cpu-card/cpu-card.component.html
@@ -1,11 +1,19 @@
 <div>
   <h1>CPU</h1>
-  <ng-container *ngIf="processos">
-    <p><strong>Nome do usuário:</strong>  {{ processos.userName }}</p>
-    <p><strong>Nome da máquina:</strong>  {{ processos.machineName }}</p>
-    <p><strong>Número de processadores:</strong>  {{ processos.processorCount }}</p>
-    <p><strong>Uso de CPU (%):</strong>  {{ processos.percentUsed | number:'1.2-2'  }}%</p>
-  </ng-container>
+  <div class="wrapper big-card">
+
+    <div>
+      <ng-container *ngIf="processos">
+        <p><strong>Nome do usuário:</strong>  {{ processos.userName }}</p>
+        <p><strong>Nome da máquina:</strong>  {{ processos.machineName }}</p>
+        <p><strong>Número de processadores:</strong>  {{ processos.processorCount }}</p>
+        <p><strong>Uso de CPU (%):</strong>  {{ processos.percentUsed | number:'1.2-2'  }}%</p>
+      </ng-container>
+    </div>
+
+    <div class="chart">
+      <div id="curve-chart"></div>
+    </div>
+  </div>
 </div>
 
-<div id="curve-chart"></div>
