--- a/frontend/MonitorProcessos/src/app/components/cpu-card/cpu-card.component.html
+++ b/frontend/MonitorProcessos/src/app/components/cpu-card/cpu-card.component.html
@@ -3,7 +3,7 @@
   <div class="wrapper big-card">
 
     <div>
-      <ng-container *ngIf="processos">
+      <ng-container *ngIf="processos ; else noDrives">
         <p><strong>Nome do usuário:</strong>  {{ processos.userName }}</p>
         <p><strong>Nome da máquina:</strong>  {{ processos.machineName }}</p>
         <p><strong>Número de processadores:</strong>  {{ processos.processorCount }}</p>
@@ -15,5 +15,9 @@
       <div id="curve-chart"></div>
     </div>
   </div>
+
+  <ng-template #noDrives>
+    <p>CPU inexistente</p>
+  </ng-template>
 </div>
 
