--- a/frontend/MonitorProcessos/src/app/components/disk-card/disk-card.component.css
+++ b/frontend/MonitorProcessos/src/app/components/disk-card/disk-card.component.css
@@ -11,3 +11,14 @@
   width: 600px;
   height: 500px;
 }
+
+.selected {
+  background: var(--clr-medium);
+  color: white;
+}
+
+.buttons {
+  display: flex;
+  gap: 12px;
+  margin-bottom: 20px;
+}
