--- a/frontend/MonitorProcessos/src/app/components/disk-card/disk-card.component.html
+++ b/frontend/MonitorProcessos/src/app/components/disk-card/disk-card.component.html
@@ -1,21 +1,27 @@
 <div>
   <h1>Drive</h1>
   <ng-container *ngIf="processos">
-
     <div *ngIf="processos.drives && processos.drives.length > 0; else noDrives">
-      <div class="wrapper small-card" *ngFor="let disk of processos.drives; let i = index">
+      <div class="wrapper small-card">
         <div>
-          <p><strong>Drives encontrados:</strong></p>
-          <div class="flex" style="flex-direction: column;">
-            <button (click)="selectDrive(i)">{{disk.driveName}}</button>
+          <p><strong>Selecione abaixo para ver detalhes:</strong></p>
+          <div class="buttons">
+            <button *ngFor="let disk of processos.drives; let i = index"
+                    (click)="selectDrive(i)"
+                    [ngClass]="{ 'selected': i === selectedDriveIndex }">
+              {{disk.driveName}}
+            </button>
           </div>
 
-          <p><strong>Informações do drive selecionado:</strong></p>
-          <p><strong>Nome do drive:</strong> {{ disk.driveName }}</p>
-          <p><strong>Tipo de drive:</strong> {{ getDriveTypeName(disk.driveType) }}</p>
-          <p><strong>Tamanho total:</strong> {{ (disk.totalSize / 1024 / 1024 / 1024) | number: '1.2-2' }} GB</p>
-          <p><strong>Espaço livre disponível:</strong> {{ (disk.availableFreeSpace / 1024 / 1024 / 1024) | number: '1.2-2' }} GB</p>
-          <p><strong>Espaço utilizado:</strong> {{ (disk.usedSpace / 1024 / 1024 / 1024) | number: '1.2-2' }} GB</p>
+          <ng-container *ngIf="selectedDriveIndex !== null">
+            <h2><strong>Informações do drive:</strong></h2>
+            <p><strong>Nome do drive:</strong> {{ processos.drives[selectedDriveIndex].driveName }}</p>
+            <p><strong>Tipo de drive:</strong> {{ getDriveTypeName(processos.drives[selectedDriveIndex].driveType) }}</p>
+            <p><strong>Tamanho total:</strong> {{ (processos.drives[selectedDriveIndex].totalSize / 1024 / 1024 / 1024) | number: '1.2-2' }} GB</p>
+            <p><strong>Espaço livre disponível:</strong> {{ (processos.drives[selectedDriveIndex].availableFreeSpace / 1024 / 1024 / 1024) | number: '1.2-2' }} GB</p>
+            <p><strong>Espaço utilizado:</strong> {{ (processos.drives[selectedDriveIndex].usedSpace / 1024 / 1024 / 1024) | number: '1.2-2' }} GB</p>
+          </ng-container>
+
         </div>
 
         <div class="chart">
