--- a/frontend/MonitorProcessos/src/app/components/process-list/process-list.component.html
+++ b/frontend/MonitorProcessos/src/app/components/process-list/process-list.component.html
@@ -1,6 +1,7 @@
 <h1>Processos</h1>
 <div class="table-responsive">
-  <table class="table table-striped" matSort (matSortChange)="sortData($event.active)">
+
+  <table *ngIf="processos; else noDrives" class="table table-striped" matSort (matSortChange)="sortData($event.active)">
     <thead class="table-light">
       <tr>
         <th mat-sort-header="nome" (click)="sortData('nome')">Nome</th>
@@ -19,3 +20,7 @@
     </tbody>
   </table>
 </div>
+
+<ng-template #noDrives>
+  <p>Processos inexistentes</p>
+</ng-template>
