:lipstick: Fix: melhora legenda de grafico, bg, botao de drives oculto

--- a/frontend/MonitorProcessos/src/app/components/dashboard/dashboard.component.css
+++ b/frontend/MonitorProcessos/src/app/components/dashboard/dashboard.component.css
@@ -1,3 +1,8 @@
+.bg {
+  background: rgb(248, 248, 248);
+}
+
+
 .grid {
   grid-template-columns: 1fr 1fr;
   grid-template-areas:
@@ -34,5 +39,9 @@
     'card-3'
     'card-4';
     gap: 20px;
+  }
+
+  .container {
+    padding: 20px;
   }
 }
