--- a/frontend/MonitorProcessos/src/app/components/header/header.component.css
+++ b/frontend/MonitorProcessos/src/app/components/header/header.component.css
@@ -6,12 +6,13 @@ header {
 
 .container {
   align-items: center;
+  padding: 20 30px;
   gap: 40px;
   justify-content: space-between;
 }
 
 .logo {
-  width: 300px;
+  width: 250px;
   max-width: 90vw;
 }
 
