--- a/frontend/MonitorProcessos/src/styles.css
+++ b/frontend/MonitorProcessos/src/styles.css
@@ -9,7 +9,7 @@
 .container {
   width: 100%;
   max-width: 1440px;
-  padding: 20px;
+  padding: 30px;
 }
 
 .flex {
@@ -28,28 +28,31 @@
   --bg-light: white;
 }
 
+p, td {
+  font-size: 12px;
+}
+
 h1 {
-  font-size: 24px !important;
-  color: var(--clr-dark) !important;
-  font-weight: 700 !important;
+  border-bottom: 1px solid rgb(241, 241, 241);
+  padding-bottom: 10px;
+  font-size: 26px !important;
   margin-bottom: 15px !important;
+  font-weight: 500 !important;
+}
+
+h2 {
+  font-weight: 300 !important;
+
 }
 
 h1, h2, h3 {
+  color: var(--clr-dark) !important;
   font-family: "Jersey 20", sans-serif !important;
 }
 
-h1 {
-  font-size: 30px !important;
-  color: var(--clr-dark);
-  font-weight: 700;
-  margin-bottom: 15px;
-}
-
-
 .card {
   border-radius: 15px;
-  padding: 25px;
+  padding: 20px 25px;
   border: none;
   box-shadow: 1px 1px 8px rgba(67, 67, 67, 0.166);
 }
@@ -130,8 +133,8 @@ a:hover {
 
   #curve-chart {
     margin-top: -60px !important;
-    margin-left: -50px !important;
-    width: 100vw !important;
+    margin-left: -10px !important;
+    width: 90vw !important;
   }
 
 }
