--- a/frontend/MonitorProcessos/src/app/components/header/header.component.html
+++ b/frontend/MonitorProcessos/src/app/components/header/header.component.html
@@ -1,8 +1,15 @@
 <header>
   <div class="flex container">
-    <img class="logo" src="../../../assets/processTrack-logo-completa.png" alt="">
+    <img class="logo" routerLink="dashboard" src="../../../assets/processTrack-logo-completa.png" alt="">
+    <!-- <nav>
+      <ul class="flex links">
+        <li routerLink="dashboard">Dashboard</li>
+        <li routerLink="graficos">Gráficos</li>
+        <li routerLink="processos">Processos</li>
+      </ul>
+    </nav> -->
     <nav>
-      <ul class="flex">
+      <ul class="flex contact">
         <li><a target="_blank" href="https://github.com/barbaradamasdev">Github</a></li>
         <li><a target="_blank" href="https://www.linkedin.com/in/barbaradamascenodev/">Linkedin</a></li>
         <li><a target="_blank" href="https://barbaradamasceno.vercel.app/">Portfolio</a></li>
