--- a/frontend/MonitorProcessos/src/app/components/memory-card/memory-card.component.css
+++ b/frontend/MonitorProcessos/src/app/components/memory-card/memory-card.component.css
@@ -1,13 +1,14 @@
 .chart {
   max-width: 100%;
-  width: 370px;
   overflow: hidden;
-  height: 320px;
+  width: 300px;
+  height: 260px;
+  margin-bottom: -20px;
 }
 
 #pie-chart {
-  margin-top: -70px;
-  margin-left: -80px;
-  width: 600px;
-  height: 500px;
+  margin-top: -50px;
+  margin-left: -20px;
+  width: 400px;
+  height: 400px;
 }
