--- a/frontend/MonitorProcessos/src/styles.css
+++ b/frontend/MonitorProcessos/src/styles.css
@@ -38,16 +38,15 @@ h1 {
   font-size: 26px !important;
   margin-bottom: 15px !important;
   font-weight: 500 !important;
+  font-family: "Jersey 20", sans-serif !important;
 }
 
-h2 {
-  font-weight: 300 !important;
-
+h2, h3 {
+  font-weight: 500 !important;
 }
 
 h1, h2, h3 {
   color: var(--clr-dark) !important;
-  font-family: "Jersey 20", sans-serif !important;
 }
 
 .card {
@@ -126,13 +125,12 @@ a:hover {
   flex-direction: row;
 }
 
-@media (max-width: 718px) {
+@media (max-width: 590px) {
   .wrapper {
     flex-direction: column !important;
   }
 
   #curve-chart {
-    margin-top: -60px !important;
     margin-left: -10px !important;
     width: 90vw !important;
   }
@@ -148,15 +146,15 @@ a:hover {
   }
 }
 
-@media (min-width: 916px) and (max-width: 1280px) {
+@media (min-width: 916px) and (max-width: 1140px) {
   .wrapper.small-card {
     flex-direction: column !important;
   }
 }
 
 @media (max-width: 460px) {
-  #disk-chart, #pie-chart {
-    margin-left: -90px !important;
-    width: 500px !important;
+  #disk-chart{
+    margin-left: -80px !important;
+    width: 430px !important;
   }
 }
