--- a/frontend/MonitorProcessos/src/app/components/header/header.component.html
+++ b/frontend/MonitorProcessos/src/app/components/header/header.component.html
@@ -1,13 +1,13 @@
 <header>
   <div class="flex container">
     <img class="logo" routerLink="dashboard" src="../../../assets/processTrack-logo-completa.png" alt="">
-    <!-- <nav>
+    <nav>
       <ul class="flex links">
         <li routerLink="dashboard">Dashboard</li>
         <li routerLink="graficos">Gráficos</li>
         <li routerLink="processos">Processos</li>
       </ul>
-    </nav> -->
+    </nav>
     <nav>
       <ul class="flex contact">
         <li><a target="_blank" href="https://github.com/barbaradamasdev">Github</a></li>
