--- a/frontend/MonitorProcessos/src/app/components/process-list/process-list.component.html
+++ b/frontend/MonitorProcessos/src/app/components/process-list/process-list.component.html
@@ -1,26 +1,29 @@
 <h1>Processos</h1>
-<div class="table-responsive">
+<ng-container *ngIf="processos; else noDrives">
+  <div class="table-responsive">
 
-  <table *ngIf="processos; else noDrives" class="table table-striped" matSort (matSortChange)="sortData($event.active)">
-    <thead class="table-light">
-      <tr>
-        <th mat-sort-header="nome" (click)="sortData('nome')">Nome</th>
-        <th mat-sort-header="id" (click)="sortData('id')">ID</th>
-        <th mat-sort-header="memoriaPagedKB">{{ (processos!.memoria.usedMemoryGB / processos!.memoria.totalMemoryGB * 100) | number:'1.0-0' }}% Memoria</th>
-        <th mat-sort-header="state">Estado</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr *ngFor="let processo of dataSource.data">
-        <td>{{ processo?.nome }}</td>
-        <td>{{ processo?.id }}</td>
-        <td>{{ (processo?.memoriaPagedKB / 1024) | number:'1.2-2' }} MB</td>
-        <td>{{ processo?.estado }}</td>
-      </tr>
-    </tbody>
-  </table>
-</div>
+    <table class="table table-striped" matSort (matSortChange)="sortData($event.active)">
+      <thead class="table-light">
+        <tr>
+          <th mat-sort-header="nome" (click)="sortData('nome')">Nome</th>
+          <th mat-sort-header="id" (click)="sortData('id')">ID</th>
+          <th mat-sort-header="memoriaPagedKB">{{ (processos!.memoria.usedMemoryGB / processos!.memoria.totalMemoryGB * 100) | number:'1.0-0' }}% Memoria</th>
+          <th mat-sort-header="state">Estado</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let processo of dataSource.data">
+          <td>{{ processo?.nome }}</td>
+          <td>{{ processo?.id }}</td>
+          <td>{{ (processo?.memoriaPagedKB / 1024) | number:'1.2-2' }} MB</td>
+          <td>{{ processo?.estado }}</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+</ng-container>
 
 <ng-template #noDrives>
   <p>Processos inexistentes</p>
 </ng-template>
+
