--- a/frontend/MonitorProcessos/src/app/components/process-list/process-list.component.html
+++ b/frontend/MonitorProcessos/src/app/components/process-list/process-list.component.html
@@ -11,7 +11,7 @@
         <tr>
           <th mat-sort-header="nome" (click)="sortData('nome')">Nome</th>
           <th mat-sort-header="id" (click)="sortData('id')">ID</th>
-          <th mat-sort-header="memoriaPagedKB">{{ (processos!.memoria.usedMemoryGB / processos!.memoria.totalMemoryGB * 100) | number:'1.0-0' }}% Memoria</th>
+          <th mat-sort-header="memoria">{{ (processos!.memoria.memoriaUtilizada / processos!.memoria.memoriaTotal * 100) | number:'1.0-0' }}% Memoria</th>
           <th mat-sort-header="state">Estado</th>
         </tr>
       </thead>
@@ -20,7 +20,7 @@
           <ng-container *ngIf="passaFiltro(processo)">
             <td>{{ processo?.nome }}</td>
             <td>{{ processo?.id }}</td>
-            <td>{{ (processo?.memoriaPagedKB / 1024) | number:'1.2-2' }} MB</td>
+            <td>{{ (processo?.memoria / 1024) | number:'1.2-2' }} MB</td>
             <td>{{ processo?.estado }}</td>
           </ng-container>
         </tr>
